lab/stages/stage-04-gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage-04-gitops
  labels:
    lab.vuln-mlops/stage: "04"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
